force-app/main/default/objects/nvl_obj_flight__c/fields/nvl_fld_arrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_arrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival airport</label>
    <referenceTo>nvl_obj_airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival airport)</relationshipLabel>
    <relationshipName>ArrivalFlights</relationshipName>
    <type>Lookup</type>
</CustomField>