force-app/main/default/objects/nvl_obj_flight__c/fields/nvl_fld_departureAirport__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_departureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure airport</label>
    <referenceTo>nvl_obj_airport__c</referenceTo>
    <relationshipLabel>DepartureFlights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>