force-app/main/default/objects/nvl_obj_flight__c/fields/nvl_fld_flightDistance__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_flightDistance__c</fullName>
    <label>Flight distance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>